Improve pattern matching and parameter validation
Improved validation for table and namespace names

* Distinguish between validating *existing* table or namespace names and
  *new* names. Existing names could exceed the max length, in which case
  we should issue a warning. New names, on the other hand, must be
  prevented from exceeding the max length and throw an exception
* Be more rigorous in checking table name length by checking the
  namespace segment independently from the table segment
* Check arguments in ClientContext consistently *after* ensureOpen()
* Remove redundant checks for name validation when it is already
  validated another API method that is immediately called in the
  implementation
* Update TableOperationsImpl and NamespaceOperationsImpl and
  ClientContext (impl for AccumuloClient) to validate namespace and
  table names
* Incorporate null checks into the Validators so two checks aren't
  necessary
* Remove validation from ConnectorImpl, because all those methods defer
  to ClientContext anyway, which already does validation

Improvements to Validator guts

* Consolidate Validators into a single class, and rewrite Validator
  class to more efficiently return the error string when there is an
  error, so that the reason for a validation failure are immediately
  known upon failure without executing the validation logic a second
  time to determine the error message
* Cache the most recently validated object in each Validator so that
  validation can be short-circuited if unintentionally called multiple
  times in quick succession (like in an API that calls another API
  method and both do argument validation)
* Move the details of the validation logic (the regular expressions,
  etc.) to private members of the Validators utility class, to keep
  validation implementation all in one place and remove any redundant
  implementations discovered in the code
* Reuse as much code as possible, to ensure consistency in error
  messages and validatio